# typechecker-for-stella-core-week2

./: .gitignore  CMakeLists.txt
src/: VisitTypeCheck.cpp  VisitTypeCheck.h
src/Stella/: Absyn.C  Absyn.H  Lexer.C  Makefile  Parser.C  Parser.H  Printer.C  Printer.H  Skeleton.C  Skeleton.H  Stella.l  Stella.y  Test.C
tests/tuples/well-typed/: tuples-1.stella
